--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
       
     </head>
     <body>
-        <div class="jumbotron">
+        <div class="jumbotron mx-auto">
             <h1>Know Your Vote</h1>
             <p>Representives in Elections</p>
         </div>
         <div class="row">
-            <div class="col-lg-6">
+            <div class="mx-auto">
                 <h2>About</h2>
         <div class="container" id="about">
             <p>
@@ -35,7 +35,7 @@
         </div>
     </div>
         <div class="row">
-            <div class="col-lg-6">
+            <div class="mx-auto">
                 <h3>Find Candidates</h3>
 
                     <div class="container">
