--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" href="style.css" />
         <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.1.1/css/ol.css" type="text/css">
 
       
     </head>
@@ -39,13 +40,14 @@
     </div>
         <div class="row">
             <div class="col-lg-12">
-                <h3>Find Candidates</h3>
+                <hr>
 
-                    <div class="container">
-                        <h5>Sort By: Candidates by district</h5>
-                    <input type="text" class="form-control" type="search" aria-label="Search">
-
-                    </div>
+                <h3>Enter your Address to See Your Polling Place Location</h3>
+                <input type="text" class="form-control" type="search" aria-label="Search">
+                <hr>
+                <h3>Polling Place for your Address</h3>
+                <div class="map" id="map"></div>
+                </div>
             </div>
         </div>
     </div>
@@ -62,7 +64,9 @@
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
     <script src="script.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=key=AIzaSyC1MqND2SWxPfzCLjrWJW7tagrSmpgr6dI&callback=initMap"
-    type="text/javascript"></script>
+    <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC1MqND2SWxPfzCLjrWJW7tagrSmpgr6dI&callback=initMap"
+    type="text/javascript"></script> -->
+    <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.1.1/build/ol.js"></script>
+
     </body>
 </html>
