--- a/index.html
+++ b/index.html
@@ -43,11 +43,29 @@
 
                     <div class="container">
                         <h5>Sort By: Candidates by district</h5>
-                    <input type="text" class="form-control" type="search" aria-label="Search">
+                        <input type="text" class="form-control" type="search" aria-label="Search">
 
                     </div>
             </div>
         </div>
+    </div>
+
+    <div class="row">
+        <div class="col-lg-12">
+            <h4>Search</h4>
+                <div class="container"></div>
+                    <div class="parameter-name color-secondary">Address</div>
+                    <input type="text" placeholder="string" id="address" name="address" class="ng-pristine ng-valid ng-star-inserted ng-touched">
+                    <div class="parameter-name color-secondary">Include Office</div>
+                    <select id="includeOffices" name="includeOffices" class="ng-pristine ng-valid ng-star-inserted ng-touched"></select>
+                    <div class="parameter-name color-secondary">Levels</div>
+                    <select id="level[0]" name="levels[0]" class="ng-pristine ng-valid ng-star-inserted ng-touched"></select>
+                    <div class="parameter-name color-secondary">Roles</div>
+                    <select id="roles[0]" name="roles[0]" class="ng-pristine ng-valid ng-star-inserted ng-touched"></select>
+
+
+        </div>
+
     </div>
        
 
