added a search result panel

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
     </div>
 
-    <div class="row">
+    <!-- <div class="row">
         <div class="col-lg-12">
             <h4>Search</h4>
                 <div class="container"></div>
@@ -68,7 +68,7 @@
 
         </div>
 
-    </div>
+    </div> -->
        
 
 
