--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 
                 <h3>Enter your Address to See Your Polling Place Location</h3>
                 <input type="text" class="form-control" type="search" aria-label="Search">
+                <button class="btn btn-primary" id="searchbtn" type="submit">Search</button>
                 <hr>
                 <h3>Polling Place for your Address</h3>
                 <div class="map" id="map"></div>
@@ -52,7 +53,7 @@
         </div>
     </div>
 
-    <div class="row">
+    <!-- <div class="row">
         <div class="col-lg-12">
             <h4>Search</h4>
                 <div class="container"></div>
@@ -66,7 +67,7 @@
                     <select id="roles[0]" name="roles[0]" class="ng-pristine ng-valid ng-star-inserted ng-touched"></select>
 
 
-        </div>
+        </div> -->
 
     </div>
        
