added tiles to use a second framework in the search.html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <link rel="stylesheet" href="style.css" />
         <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.1.1/css/ol.css" type="text/css">
+        <!--Bulma link-->
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.8.0/css/bulma.css" rel ="stylesheet">
 
       
     </head>
