--- a/search.html
+++ b/search.html
@@ -52,7 +52,7 @@
 
                             <div class="tile is-child box is-12">
                                 <div class="form-group">
-                                    <label class="mr-sm-2" for="sel1">Levels</label>
+                                    <label class="mr-sm-2" for="sel1">Levels:</label>
                                     <select class="form-control" id="levels">
                                         <option selected>Choose...</option>
                                         <option value="administrativeArea1">administrative Area 1</option>
@@ -66,7 +66,7 @@
                             </div>
                             <div class="tile is-child box is-12">
                                 <div class="form-group">
-                                    <label class="mr-sm-2" for="sel1">Roles</label>
+                                    <label class="mr-sm-2" for="sel1">Roles:</label>
                                     <select class="form-control" id="roles">
                                     <option selected>Choose...</option>
                                     <option value="deputyHeadOfGovernment">Deputy Head of Government</option>
@@ -89,7 +89,7 @@
 
 
                           
-                        <button class="button is-rounded" type="submit" id="submit"><i class="fa fa-search" aria-hidden="true"></i>Submit</button>
+                        <button class="button is-rounded" type="search" id="search"><i class="fa fa-search"></i>Submit</button>
                         <button class="button is-rounded" type="clear" id="clear">Clear Results</button>
                     </form>
 
