representatives page works, but URLs are commented out bc they cause issues in some searches

--- a/search.html
+++ b/search.html
@@ -72,13 +72,13 @@
                                     <option value="deputyHeadOfGovernment">Deputy Head of Government</option>
                                     <option value="executiveCouncil">aexecutive Council</option>
                                     <option value="governmentOfficer">Government Officer</option>
-                                    <option id="headOfState">Head of State</option>
-                                    <option id="highestCourtJudge">Highest Court Judge</option>
-                                    <option id="judge">judge</option>
-                                    <option id="legislatorLowerBody">Legislator Lower Body</option>
-                                    <option id="legislatorUpperBody">Legislator Upper Body</option>
-                                    <option id="schoolBoard">School Board</option>
-                                    <option id="specialPurposeOfficer">Special Purpose Officer</option>
+                                    <option value="headOfState">Head of State</option>
+                                    <option value="highestCourtJudge">Highest Court Judge</option>
+                                    <option value="judge">judge</option>
+                                    <option value="legislatorLowerBody">Legislator Lower Body</option>
+                                    <option value="legislatorUpperBody">Legislator Upper Body</option>
+                                    <option value="schoolBoard">School Board</option>
+                                    <option value="specialPurposeOfficer">Special Purpose Officer</option>
                                 
                                     </select>
                                 </div>
