--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
         <meta charset="UTF-8">
         <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-
-
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -21,63 +19,53 @@
     <body>
         <div class="jumbotron mx-auto">
             <h1>Know Your Vote</h1>
-            <p id="jumboText">Representives in Elections</p>
+            <p id="jumboText">Election Information</p>
         </div>
-        <div class= "container">
-        <div class="row">
-            <div class="col-lg-12 justify-content-center">
-                <h2>About</h2>
-        <div class="container" id="about">
-            <p>
-                There are many U.S. elections throughout the year, and both election information and political geography can shift with time. Click here to see upcoming elections.
-                <br>
-                <!--btn connects with election page-->
-                <button class="button is-rounded" type="search" id="election"><i class="fa fa-search"></i>See Elections</button>
-                <br>
-                This is an application designed to look up who a user’s elected representatives are locally and across the United States. Based on the user’s address, the application can find all the local, county, state, and federal official who represent the user in government. Click here to get information about your representatives
-                <br>
-                <!--button connects with search.html-->
-                <button class="button is-rounded" type="search" id="representative">Your Representatives</button>
-                <br>
-                Knowing who these representatives are and informing yourself about elections before voting is the most effective way to change how our government works.
-            </p>
+
+        <div class= "container" id="about">
+            <div class="row">
+                <div class="col-lg-12 justify-content-center">
+                    <h2>About</h2>
+                    <p>
+                        There are many U.S. elections throughout the year, and both election information and political geography can shift with time. Click here to see upcoming elections in your area and get information about the candidates.
+                        <br>
+                        <!--btn connects with election page-->
+                        <button class="button is-rounded" type="search" id="election"><i class="fa fa-search"></i>See Elections</button>
+                        <br>
+                        This is an application designed to look up who a user’s elected representatives are locally and across the United States. Based on the user’s address, the application can find all the local, county, state, and federal official who represent the user in government. Click here to get information about your representatives
+                        <br>
+                        <!--button connects with search.html-->
+                        <button class="button is-rounded" type="search" id="representative">Your Representatives</button>
+                        <br>
+                        Knowing who these representatives are and informing yourself about elections before voting is the most effective way to change how our government works.
+                    </p>
+                </div>
             </div>
         </div>
-    </div>
-        <div class="row">
-            <div class="col-lg-12">
-                <hr>
 
-                <h3>Enter your Address to See Your Polling Place Location</h3>
+        <div class="container" id="address">
+            <div class="row">
+                <div class="col-lg-12">
+                    <hr>
+
+                <h2>Enter your Address to See Your Polling Place Location</h2>
                 <input type="text" class="form-control" type="search" aria-label="Search">
                 <button class="button is-rounded" type="search" id="search"><i class="fa fa-search"></i>Search</button>
 
                 <hr>
-                <h3>Polling Place for your Address</h3>
-                <div class="map" id="map"></div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <!-- <div class="row">
-        <div class="col-lg-12">
-            <h4>Search</h4>
-                <div class="container"></div>
-                    <div class="parameter-name color-secondary">Address</div>
-                    <input type="text" placeholder="string" id="address" name="address" class="ng-pristine ng-valid ng-star-inserted ng-touched">
-                    <div class="parameter-name color-secondary">Include Office</div>
-                    <select id="includeOffices" name="includeOffices" class="ng-pristine ng-valid ng-star-inserted ng-touched"></select>
-                    <div class="parameter-name color-secondary">Levels</div>
-                    <select id="level[0]" name="levels[0]" class="ng-pristine ng-valid ng-star-inserted ng-touched"></select>
-                    <div class="parameter-name color-secondary">Roles</div>
-                    <select id="roles[0]" name="roles[0]" class="ng-pristine ng-valid ng-star-inserted ng-touched"></select>
-
-
+        <div class="container" id="mapCon">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h2>Polling Place for your Address</h2>
+                    <div class="map" id="map"></div>
+                </div>
+            </div>
         </div>
-
-    </div> -->
-       
+    
 
 
 
@@ -90,8 +78,6 @@
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
     <script src="script.js"></script>
-    <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC1MqND2SWxPfzCLjrWJW7tagrSmpgr6dI&callback=initMap"
-    type="text/javascript"></script> -->
     <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.1.1/build/ol.js"></script>
 
     </body>
