all htmls are connected via button now

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
                         There are many U.S. elections throughout the year, and both election information and political geography can shift with time. Click here to see upcoming elections in your area and get information about the candidates.
                         <br>
                         <!--btn connects with election page-->
-                        <button class="button is-rounded" type="search" id="election"><i class="fa fa-search"></i>See Elections</button>
+                        <button class="button is-rounded" type="search" id="election"><a href ="polling.html">Election Info</a></button>
                         <br>
                         This is an application designed to look up who a user’s elected representatives are locally and across the United States. Based on the user’s address, the application can find all the local, county, state, and federal official who represent the user in government. Click here to get information about your representatives
                         <br>
                         <!--button connects with search.html-->
-                        <button class="button is-rounded" type="search" id="representative">Your Representatives</button>
+                        <button class="button is-rounded" type="search" id="representative"><a href ="representatives.html">Your Representatives</a></button>
                         <br>
                         Knowing who these representatives are and informing yourself about elections before voting is the most effective way to change how our government works.
                     </p>
