--- a/polling.html
+++ b/polling.html
@@ -23,7 +23,7 @@
     <header>
         <div class="jumbotron">
             <h1>Know Your Vote</h1>
-            <p id="jumboText">Polling Locations</p>
+            <p id="jumboText">Local Election Information</p>
         </div>
     </header>
 
@@ -52,7 +52,8 @@
                         </div>
                                 
                             <button class="button is-rounded" type="search" id="pollSearch"><i class="fa fa-search"></i>Submit</button>
-                  
+                            <button class="button is-rounded" id="backBtn"><a href="index.html">Go Back</a></button>
+
 
                     </div>
                 </div>
