cards for reps, still needs styling. Somehow not all reps are loading anymore

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     </head>
     <body>
         <div class="jumbotron mx-auto">
-            <h1>Know Your Vote</h1>
-            <p id="jumboText">Election Information</p>
+            <h1 class= "jumboText">Know Your Vote</h1>
+            <p class="jumboText">Election Information</p>
         </div>
 
         <div class= "container" id="about">
