--- a/pollingWithBulmaOnly.html
+++ b/pollingWithBulmaOnly.html
@@ -67,8 +67,8 @@
                         </div>
                  
                                 
-                        <button class="button is-dark" type="search" id="pollSearch"><i class="fa fa-search"></i>Submit</button>
-                        <button class="button is-light" id="backBtn"><a href="index.html">Go Back</a></button>
+                        <button class="btn btn-dark" type="search" id="pollSearch"><i class="fa fa-search"></i>Submit</button>
+                        <button class="btn btn-light" id="backBtn"><a href="index.html">Go Back</a></button>
 
 
                     </div>
