--- a/polling.html
+++ b/polling.html
@@ -21,7 +21,7 @@
     
     <body>
     <header>
-        <div class="jumbotron bg-dark">
+        <div class="jumbotron mx-auto">
             <h1 class= "jumboText">Know Your Vote</h1>
             <p class="jumboText">Election Information</p>
         </div>
