--- a/polling.html
+++ b/polling.html
@@ -121,8 +121,8 @@
                     </div>
                     <div class="panel-body" >
 
-                        <div class="tile is-ancestor">
-                            <div class="tile is-12 is-vertical is-parent">
+                        <div class="card is-ancestor">
+                            <div class="tile is-12 is-horizontal is-parent">
                                 <div class="tile is-child box"id="candidateSection">
                                     
                                 
