--- a/representatives.html
+++ b/representatives.html
@@ -26,6 +26,7 @@
     </header>
 
     <body>
+    <div class=container>
         <div class="row" id="upperRow">
             <div class="col-lg-12">
                 <div class="panel panel-default">
@@ -111,6 +112,7 @@
                 </div>
             </div>
         </div>
+    </div>
          
        
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"
