--- a/index.html
+++ b/index.html
@@ -46,59 +46,25 @@
             </div>
         </div>
 
-
         <div class="container" id="address">
             <div class="row">
+              <div class="col-lg-12">
+                <h2>Enter your Address to See Your Polling Place Location</h2>
+                <input id="autocomplete" placeholder="Enter your address" onFocus="geolocate()" type="text" class="form-control">
+                <button class="button is-rounded" type="search" id="search"><i class="fa fa-search"></i>Search</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="container" id="map">
+            <div class="row">
                 <div class="col-lg-12">
-                <hr>
-
-                <div class="panel panel-primary">
-                    <div class="panel-heading"id="panelHead">
-                        <h2 class="panel-title">Add your Address</h2>
-                    </div>
-                        <div class="panel-body">
-                            <input id="autocomplete" placeholder="Enter your address" onFocus="geolocate()" type="text" class="form-control">
-                            <div id="address">
-                                <div class="row">
-                                <div class="col-md-6">
-                                    <label class="control-label">Street address</label>
-                                    <input class="form-control" id="street_number" disabled="true">
-                                </div>
-                                <div class="col-md-6">
-                                    <label class="control-label">Route</label>
-                                    <input class="form-control" id="route" disabled="true">
-                                </div>
-                                </div>
-                                <div class="row">
-                                <div class="col-md-6">
-                                    <label class="control-label">City</label>
-                                    <input class="form-control field" id="locality" disabled="true">
-                                </div>
-                                <div class="col-md-6"> 
-                                    <label class="control-label">State</label>
-                                    <input class="form-control" id="administrative_area_level_1" disabled="true">
-                                </div>
-                                </div>
-                                <div class="row">
-                                <div class="col-md-6">
-                                    <label class="control-label">Zip code</label>
-                                    <input class="form-control" id="postal_code" disabled="true">
-                                </div>
-                                <div class="col-md-6">
-                                    <label class="control-label">Country</label>
-                                    <input class="form-control" id="country" disabled="true">
-                                </div>
-                                <br>
-                                <!--btn connects with election page-->
-                                <a href="polling.html" class="btn btn-primary btn-lg active" role="button" aria-pressed="true"id="electionBtn">Election Info</a>
-                                <br>
-                            </div>
-                        </div>
-                    </div>
-                    </div>
+                    <h2>Polling Place for your Address</h2>
+                    <div class="map" id="map"></div>
+                </div>
             </div>
         </div>
-    </div>
+
 
         
     
@@ -116,7 +82,9 @@
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
     <script src="script.js"></script>
+    <script src="initialize.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.1.1/build/ol.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC1MqND2SWxPfzCLjrWJW7tagrSmpgr6dI&signed_in=true&libraries=places&callback=initialize" async defer></script>
 
     </body>
 </html>
