--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
             </div>
         </div>
 
+        <!-- This displays the input that allows the user place thier address for polling location -->
+
         <div class="container" id="address">
             <div class="row">
               <div class="col-lg-12">
