--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@
             </div>
         </div>
 
-        <!-- This displays the input that allows the user place thier address for polling location -->
-
-        <div class="container" id="address">
+        <!-- <div class="container" id="address">
             <div class="row">
               <div class="col-lg-12">
 
