took out containers to make it look better mobile

--- a/polling.html
+++ b/polling.html
@@ -28,7 +28,7 @@
     </header>
 
     <body>
-    <div class="container">
+    <!-- <div class="container"> -->
 
         <!-- this whole row will be kicked out once local storage and jonathan's address work-->
         <div class="row" id="upperRow">
@@ -64,11 +64,11 @@
                 </div>
             </div>
         </div>
-    </div>
+    <!-- </div> -->
 
 
     <!--Map Row-->
-    <div class="container">
+    <!-- <div class="container"> -->
 
         <div class="row" id="lowerRow">
 
@@ -126,12 +126,12 @@
                 </div>
             </div>
         </div>
-    </div>
+    <!-- </div> -->
 
 
     <!--eraly vote row-->
 
-    <div class="container">
+    <!-- <div class="container"> -->
     <div class="row" id="secondLowestRow">
 
         <div class="col-lg-12" id="earlyVotes">
@@ -151,10 +151,10 @@
             </div>
         </div>
     </div>
-</div>
+<!-- </div> -->
 
         <!--Results should show upcomign election, polling address and candidates. It works in console log but there is a bug that its not appending without throwing an error-->
-<div class="container">
+<!-- <div class="container"> -->
     <div class="row" id="lowestRow">
         <div class="col-lg-12" id="candidates">
             <div class="panel panel-default">
@@ -174,7 +174,7 @@
         </div>
     </div>
 
-</div>
+<!-- </div> -->
 
 
 
