--- a/representatives.html
+++ b/representatives.html
@@ -41,7 +41,7 @@
                           <div class="tile is-child box">
                              
                             <div class="form-group ">
-                                <label for="search-term">Enter Address:</label>
+                                <!-- <label for="search-term">Enter Address:</label> -->
                                 <input id="autocomplete" placeholder="Enter your address" onFocus="geolocate()" type="text" class="form-control">
                                 <br>
 
