--- a/polling.html
+++ b/polling.html
@@ -46,7 +46,7 @@
                                 <div class="tile is-child box">
                                     
                                     <div class="form-group ">
-                                        <!-- <label for="search-term">Enter Address:</label> -->
+                                        <label for="search-term">Enter Address:</label>
                                         <input id="autocomplete" placeholder="Enter your address" onFocus="geolocate()" type="text" class="form-control">
                                         <br>
 
@@ -180,8 +180,7 @@
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"
 integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-<!-- <script src="auto-complete.js"></script> -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC1MqND2SWxPfzCLjrWJW7tagrSmpgr6dI&libraries=places&callback=initAutocomplete" async defer></script>
+
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
 integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
 crossorigin="anonymous"></script>
