--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                                 This is an application designed to look up who a user’s elected representatives are locally and across the United States. Based on the user’s address, the application can find all the local, county, state, and federal official who represent the user in government. Click here to get information about your representatives
                                 <br>
                                 <!--button connects with search.html-->
-                                <a href="representatives.html" class="btn btn-block btn-lg active" role="button" aria-pressed="true"id="representBtn">Your Representatives</a>
+                                <a href="representatives.html" class="btn btn-primary btn-lg active" role="button" aria-pressed="true"id="representBtn">Your Representatives</a>
                                 <br>
                                 There are many U.S. elections throughout the year, and both election information and political geography can shift with time. To see upcoming elections in your area and get information about the your candidates and polling locations and hours, enter your address below and click "Election Info".
                                 <br>
