--- a/representatives.html
+++ b/representatives.html
@@ -74,11 +74,11 @@
                                 
                                 <option selected>Choose...</option>
                                 <option value="deputyHeadOfGovernment">Deputy Head of Government</option>
-                                <option value="executiveCouncil">executive Council</option>
+                                <option value="executiveCouncil">Executive Council</option>
                                 <option value="governmentOfficer">Government Officer</option>
                                 <option value="headOfState">Head of State</option>
                                 <option value="highestCourtJudge">Highest Court Judge</option>
-                                <option value="judge">judge</option>
+                                <option value="judge">Judge</option>
                                 <option value="legislatorLowerBody">Legislator Lower Body</option>
                                 <option value="legislatorUpperBody">Legislator Upper Body</option>
                                 <option value="schoolBoard">School Board</option>
