--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                                 <br>
                                 There are many U.S. elections throughout the year, and both election information and political geography can shift with time. To see upcoming elections in your area and get information about the your candidates and polling locations and hours, enter your address below and click "Election Info".
                                 <br>
-                                <a href="polling.html" class="btn btn-block btn-lg active" role="button" aria-pressed="true"id="electionBtn">Election Info</a>
+                                <a href="polling.html" class="btn btn-primary btn-lg active" role="button" aria-pressed="true"id="electionBtn">Election Info</a>
                                 <br>
                                 Knowing who your representatives are and informing yourself about elections before voting is the most effective way to change how our government works.
                                  </p>
