--- a/representatives.html
+++ b/representatives.html
@@ -127,9 +127,7 @@
     crossorigin="anonymous"></script>
     <script src="./assets/script/script.js"></script>
     <script src="./assets/script/initialize.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC1MqND2SWxPfzCLjrWJW7tagrSmpgr6dI&signed_in=true&libraries=places&callback=initialize" async defer></script>
-
-
-</body>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC1MqND2SWxPfzCLjrWJW7tagrSmpgr6dI&libraries=places&callback=initialize" async defer></script>
+    </body>
 </html>
     
