--- a/representatives.html
+++ b/representatives.html
@@ -92,7 +92,7 @@
                     
 
                         <button class="btn btn-primary btn-lg" type="search" id="searchRepBtn">Submit</button>
-                        <button class="btn btn-primary btn-lg" type="search" id="homeBtn"><a href="index.html">Go Back</a></button>
+                        <a href="index.html" class="btn btn-dark btn-lg" role="button" aria-pressed="true"id="backBtn">Go Back</a>
                         <!-- <button class="btn btn-primary btn-lg" id="gobackHome"><a href="index.html">Go Back</a></button> -->
                     </form>
 
