--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
                         </div>
                         <div class="panel-body">
                             <p>
-                                This is an application designed to look up who a user’s elected representatives are locally and across the United States. Based on the user’s address, the application can find all the local, county, state, and federal official who represent the user in government. Click here to get information about your representatives
+                                Find out who your elected representatives are locally and across the United States. By entering your address and selcting what kind of information you are looking for, the information will get tailored to your input. Click here to get information about your representatives:
                                 <br>
                                 <!--button connects with search.html-->
                                 <a href="representatives.html" class="btn btn-primary btn-lg active" role="button" aria-pressed="true"id="representBtn">Your Representatives</a>
                                 <br>
-                                There are many U.S. elections throughout the year, and both election information and political geography can shift with time. To see upcoming elections in your area and get information about the your candidates and polling locations and hours, enter your address below and click "Election Info".
+                                There are many U.S. elections throughout the year, and both election information and political geography can shift with time. To see upcoming elections in your area and get information about ypur polling location and the candidates on your ballot, click "Election Info".
                                 <br>
                                 <a href="polling.html" class="btn btn-primary btn-lg active" role="button" aria-pressed="true"id="electionBtn">Election Info</a>
                                 <br>
-                                Knowing who your representatives are and informing yourself about elections before voting is the most effective way to change how our government works.
+                                Knowing who your representatives are and informing yourself about elections before voting is the most effective way to have an impact on your government.
                                  </p>
                             </div>
                     </div>
