--- a/polling.html
+++ b/polling.html
@@ -53,6 +53,7 @@
                                         <button class="btn btn-dark btn-lg" type="search" id="pollSearchBtn">Polling Location</button>
                                         <button class="btn btn-dark btn-lg" type="search" id="earlySearchBtn">Early Voting</button>
                                         <button class="btn btn-dark btn-lg" type="search" id="candSearchBtn">Candidates on Ballot</button>
+                                        <button class="btn btn-dark btn-lg" type="search" id="repSearchBtn">Current Representatives</button>
 
                                         <a href="index.html" class="btn btn-dark btn-lg" role="button" aria-pressed="true"id="backBtn">Go Back</a>
                                     
