spelling error fix

--- a/polling.html
+++ b/polling.html
@@ -272,7 +272,7 @@
         <div class="col-lg-12" id="earlyVotes">
             <div class="panel panel-default">
                 <div class="panel-heading"id="panelHead">
-                    <h2 class="panel-title">Early Voting</h2>
+                    <h2 class="panel-title">Early Voting Locations and Times</h2>
                 </div>
                 <div class="panel-body">
 
