--- a/polling.html
+++ b/polling.html
@@ -325,7 +325,7 @@ crossorigin="anonymous"></script>
 <script src="./assets/script/script.js"></script>
 <script src="./assets/script/initialize.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.1.1/build/ol.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC1MqND2SWxPfzCLjrWJW7tagrSmpgr6dI&signed_in=true&libraries=places&callback=initialize" async defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC1MqND2SWxPfzCLjrWJW7tagrSmpgr6dI&libraries=places&callback=initialize" async defer></script>
 
 
     </body>
