fixed error in index text

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!--center the buttons-->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -33,21 +32,15 @@
                         </div>
                         <div class="panel-body">
                             <p>
-<<<<<<< HEAD
                                 There are many U.S. elections throughout the year, and both election information and political geography can shift with time. Get all the information you need, to know about your current government officials and to be informed for the next upcoming election. By clicking the <strong>"Know Your Vote"</strong> Button, you can get personalized information.
                             </p>
-=======
-                                Find out who your elected representatives are locally and across the United States. By entering your address and selcting what kind of information you are looking for, the information will get tailored to your input. Click here to get information about your representatives:
-
-
->>>>>>> master
                                 <br>
                                 <div class="text-center">
                                     <a href="polling.html" class="btn btn-primary btn-lg active" role="button" aria-pressed="true"id="electionBtn">Know Your Vote!</a>
                                 </div>
                                 <br>
                             <p>
-                                Information about the polling location and hours of your next upcoming election in your area, early voting information, information about the candidates you will see on your ballot, and information about who your current representatives are. 
+                                You will be able to receive information about your next upcoming election in your area, the polling location and hours, early voting information, information about the candidates you will see on your ballot, and information about who your current representatives. 
                                 <br>
                                 Knowing who your representatives are and informing yourself about elections before voting is the most effective way to have an impact on your government.
                             </p>
