--- a/polling.html
+++ b/polling.html
@@ -136,7 +136,7 @@
             </div>
             
             
-            <div class="col-lg-6">
+            <div class="col-lg-6" id="mapSection">
                 <div class="panel panel-default">
                     <div class="panel-heading"id="panelHead">  
                         <h2 class="panel-title">Polling Location on Map</h2>
